<resources>
    <string name="app_name">Room_Database</string>
    <string name="delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="add">Add</string>
    <string name="second_name">Second Name</string>
    <string name="age">Age</string>
    <string name="first_name">First Name</string>
    <string name="button">Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">Update</string>
    <string name="_1">1</string>
    <string name="last_name">Last Name</string>
    <string name="_25">25</string>
</resources>